@@ -17,6 +17,8 @@ Revision history for {{$dist->name}}:
   [Documentation]
   - Fixed POD formatting.
 
+  - Documented the format of the log message.
+
 v0.4.0    2020-03-09 17:37:21+00:00 Europe/London
   [Enhancements]
   - Added Plack::Middleware::Security::Common with some common
